2017-12-15  Araki Ken  <arakiken@users.sf.net>

	* README.ja: Updated.

	* java/Makefile.in: vtemu/mlterm.o is built.

	* mlterm.[ch], MLTermPty.c: Java_mlterm_MLTermPty_nativeOpen() in MLTermPty.c
	  is separated to mlterm_open() in mlterm.[ch].

	* ef_utf32_parser.c: Illegal access to uninitalized memory is fixed.

	* configure.in: libvterm/Makefile is generated.

	* Makefile.in: vterm, install-vterm and clean-vterm targets are added.

	* libvterm/*: Added.

	* vt_termcap.c: vt_termcap_special_key_to_seq() returns "\x1b" for SPKEY_ESCAPE.

	* vt_parser.[ch]:
	  - write_loopback() changes behavior if pty is for libvterm or not.
	  - vt_parser_set_use_multi_col_char() is removed.

	* ui_screen.c, vt_parser.c: OSC 5379/5380 of "use_multi_column_char" is
	  processed in vt_parser.c instead of ui_screen.c.

	* vt_pty_ssh.c: vt_pty_ssh_keepalive() returns left time of keepalive.

	* version.h: 3.8.4 -> 3.8.4post

2017-12-02  Araki Ken  <arakiken@users.sf.net>

	* 3.8.4 released.
	  (tag "rel-3_8_4")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h:
	  updated for 3.8.4.

	* PROTOCOL, man/mlterm.1: Updated.

2017-12-02  Araki Ken  <arakiken@users.sf.net>

	* ui_font_ft.c: ISCII and ISO10646_UCS4_1 fonts are forced to be treated as
	  proportional.

2017-11-30  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL, doc/en/README.fb, doc/ja/README.fb, README.ja: Updated.

	* vt_line.c: line->ctl_info.ot_layout->complex_shape and
	  line->ctl_info.ot_layout->has_var_width_char are checked.

	* vt_ot_layout.[ch]:
	  complex_shape and has_var_width_char are added to vt_ot_layout_state_t.

	* vt_shape.[ch]: IS_VAR_WIDTH_CHAR() is added.

	* hb.c: convert_text_to_glyphs() always sets glyph indexes in 'shaped'.

	* ui_screen.c: vt_line_unshape() is added before 'return 0' in draw_cursor().

	* ui_draw_str.[ch]: ui_calculate_mlchar_width() -> ui_calculate_vtchar_width()

2017-11-26  Araki Ken  <arakiken@users.sf.net>

	* MLTermPty.c: